--- a/og.css
+++ b/og.css
@@ -2562,8 +2562,7 @@ fieldset:disabled a.btn {
 
 .btn-success {
   color: #fff;
-  background-color: #0050a6;
-  border-color: #0050a6;
+  background-color: #4a22bd;
 }
 
 .btn-success:hover {
