--- a/og.css
+++ b/og.css
@@ -11074,3 +11074,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     margin-left: unset;
   }
 }
+
+div[rel="navigation"] {
+  margin-left: 0;
+}
