--- a/client.css
+++ b/client.css
@@ -10265,13 +10265,13 @@ body.dasignature a.btn-primary:focus {
   }
 }
 
-.row.tab-content {
+.container {
   margin-left: 0px;
   margin-right: 0px;
 }
 
 @media (min-width: 1200px) {
-  .row.tab-content {
+  .container {
     margin-left: 50px;
     margin-right: 50px;
   }
