--- a/client.css
+++ b/client.css
@@ -1,2 +1,2 @@
 @import url("https://freyja-934.github.io/freyja-css/gavel-new.css");
-@import url("https://freyja-934.github.io/freyja-css/client-og.css");
+@import url("https://freyja-934.github.io/freyja-css/client-custom.css");
