--- a/og.css
+++ b/og.css
@@ -10282,8 +10282,8 @@ body.dasignature a.btn-primary:focus {
 
 @media (min-width: 1200px) {
   .container {
-    margin-left: 50px;
-    margin-right: 50px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
