--- a/gavel-new.css
+++ b/gavel-new.css
@@ -4186,6 +4186,8 @@ div[role="navigation"] {
   color: #25262b !important;
 }
 
+
+
 .nav-pills .nav-link:not(.active):not(.text-muted)::after {
   content: "\2713";
   position: absolute;
@@ -10280,8 +10282,8 @@ body.dasignature a.btn-primary:focus {
 
 @media (min-width: 1200px) {
   .container {
-    margin-left: 50px;
-    margin-right: 50px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
