--- a/gavel-new.css
+++ b/gavel-new.css
@@ -10276,7 +10276,7 @@ body.dasignature a.btn-primary:focus {
 
 .hslNavContainer,
 .container {
-  max-width: 2000px;
+  max-width: 1920px;
 }
 
 @media (min-width: 992px) {
@@ -10933,7 +10933,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 }
 .tab-pane {
   flex: 0 0 78.333333%;
-  max-width: calc(78.333333% - 50px);
+  max-width: 78.333333%;
 }
 /* My Responsive style start here
 ===========================================================================*/
