--- a/og.css
+++ b/og.css
@@ -10933,8 +10933,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 }
 .tab-pane {
   flex: 0 0 78.333333%;
-  max-width: calc(78.333333% - 50px);
-}
+  max-width: 78.333333%;
 /* My Responsive style start here
 ===========================================================================*/
 @media only screen and (min-width: 1200px) {
